--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -4,9 +4,15 @@
     "about": "About Us",
     "pricing": "Pricing",
     "contact": "Contact",
-    "login": "Portal Log In",
-    "getStarted": "Get Started",
-    "installApp": "Install App"
+    "portal_login": "Portal Log In",
+    "get_started": "Get Started",
+    "login": "Log In",
+    "sign_up": "Sign Up"
+  },
+  "language_toggle": {
+    "en_display": "English",
+    "bn_display": "বাংলা",
+    "switch_to": "Switch to"
   },
   "hero": {
     "title": "The All-in-One Platform for Modern Property Management",
@@ -14,29 +20,307 @@
     "cta": "Start Your Free Trial"
   },
   "features": {
-      "title": "Powerful Tools for Every Role",
-      "subtitle": "From individual landlords to large agencies, our platform is designed to fit your needs.",
-      "card1Title": "Centralized Dashboard",
-      "card1Text": "View properties, tenants, and payments at a glance. Get a clear overview of your entire portfolio's performance.",
-      "card2Title": "Secure Document Storage",
-      "card2Text": "Upload and manage lease agreements, tenant IDs, and other important documents in one secure, accessible location.",
-      "card3Title": "Audit Trails & Security",
-      "card3Text": "Track every important action with a detailed audit log. Your data is secure with our multi-tenant architecture."
+    "title": "Powerful Tools for Every Role",
+    "subtitle": "From individual landlords to large agencies, our platform is designed to fit your needs.",
+    "card1Title": "Centralized Dashboard",
+    "card1Text": "View properties, tenants, and payments at a glance. Get a clear overview of your entire portfolio's performance.",
+    "card2Title": "Secure Document Storage",
+    "card2Text": "Upload and manage lease agreements, tenant IDs, and other important documents in one secure, accessible location.",
+    "card3Title": "Audit Trails & Security",
+    "card3Text": "Track every important action with a detailed audit log. Your data is secure with our multi-tenant architecture."
+  },
+  "about": {
+    "title": "About HNV Solutions",
+    "subtitle": "We are dedicated to simplifying property management through innovative technology.",
+    "mission_title": "Our Mission",
+    "mission_statement": "To provide user-friendly tools that empower property managers to achieve operational excellence, enhance tenant satisfaction, and maximize profitability.",
+    "vision_title": "Our Vision",
+    "vision_statement": "To be the leading global platform for property management, recognized for our commitment to customer success and continuous innovation.",
+    "team_title": "Meet Our Leadership",
+    "team_subtitle": "The driving force behind our commitment to excellence."
+  },
+  "pricing": {
+    "title": "Choose The Plan That's Right For You",
+    "subtitle": "Simple, transparent pricing to help you grow. No hidden fees, cancel anytime.",
+    "per_month": "/ month",
+    "choose_plan": "Choose Plan",
+    "disclaimer": "Subscription and billing are managed securely through our payment partner."
+  },
+  "install_app": {
+    "title": "Get the Full App Experience",
+    "subtitle": "Install the HNV web app on your device for faster access and a native-like feel, available on all platforms.",
+    "install_button": "Install App on Your Device"
+  },
+  "contact": {
+    "title": "Get In Touch",
+    "subtitle": "We're here to help. Contact us for inquiries, support, or to learn more about our solutions.",
+    "form_title": "Send Us a Message"
+  },
+  "footer": {
+    "description": "HNV Solutions is the leading platform for streamlining property management tasks, from tenant communication to financial tracking.",
+    "copyright_text": "HNV Property Management Solutions. All Rights Reserved.",
+    "quick_links": "Quick Links",
+    "legal_links": "Legal",
+    "social_links": "Social"
+  },
+  "auth": {
+    "welcome_back": "Welcome Back!",
+    "login_prompt": "Log in to your account to continue.",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "or": "OR",
+    "sign_in_google": "Sign In with Google",
+    "no_account_prompt": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "forgot_password": "Forgot Password?",
+    "create_account": "Create Your Account",
+    "start_trial": "Start your free trial today.",
+    "choose_role": "First, choose your role",
+    "i_am_landlord": "I am a Landlord",
+    "i_am_agent": "I am an Agent",
+    "full_name": "Full Name",
+    "create_password": "Create Password",
+    "confirm_password": "Confirm New Password",
+    "creating_account": "Creating Account...",
+    "smarter_management_title": "A smarter way to manage properties.",
+    "smarter_management_subtitle": "Our platform provides the tools, security, and support you need to grow your business.",
+    "already_have_account": "Already have an account?",
+    "sign_in_here": "Sign In Here",
+    "forgot_password_title": "Forgot Your Password?",
+    "forgot_password_prompt": "No problem. Enter your email address below, and we'll send you a link to reset it.",
+    "sending": "Sending...",
+    "send_reset_link": "Send Reset Link",
+    "remembered_password": "Remembered your password?",
+    "choose_new_password": "Choose a New Password",
+    "resetting": "Resetting...",
+    "reset_password": "Reset Password",
+    "invalid_or_expired_token": "Invalid or expired invitation token.",
+    "loading": "Loading...",
+    "accept_invite": "Accept Invitation",
+    "invite_email_prompt": "You have been invited to join the organization with the email:",
+    "set_password_prompt": "Please set a password to complete your registration.",
+    "accept_create_account": "Accept & Create Account",
+    "you_are_invited": "You're Invited!",
+    "invited_by": "{{inviterName}} has invited you to join their team as an Agent/Manager.",
+    "set_password_new_user": "Since you're new, please set a password to create your account.",
+    "accept_continue": "Accept Invitation & Continue",
+    "failed_to_send_invitation": "Failed to send invitation.",
+    "account_status_inactive": "Your Account Is {{statusText}}",
+    "regain_access_prompt": "To regain full access to your dashboard, please reactivate your subscription.",
+    "could_not_retrieve_plan": "Could not retrieve plan information for reactivation. Please contact support.",
+    "redirecting_to_payment": "Redirecting to Payment..."
+  },
+  "payment_pages": {
+    "payment_successful_title": "Payment Successful!",
+    "payment_successful_message": "Your subscription has been activated. Thank you for your purchase.",
+    "go_to_dashboard": "Go to Your Dashboard",
+    "payment_canceled_title": "Payment Canceled",
+    "payment_canceled_message": "Your payment process was canceled. You have not been charged.",
+    "return_to_dashboard": "Return to Dashboard",
+    "order_summary": "Order Summary",
+    "subscribe_plan_prompt": "You are about to subscribe to the following plan:",
+    "proceed_secure_payment": "Proceed to Secure Payment",
+    "redirect_to_2checkout": "You will be redirected to our secure payment partner, 2Checkout, to complete your purchase."
   },
   "dashboard": {
-    "nav": {
-      "overview": "Overview",
-      "organization": "My Organization",
-      "properties": "Properties",
-      "tenants": "Tenants",
-      "expenses": "Expenses",
-      "maintenance": "Maintenance",
-      "users": "Users & Invites",
-      "billing": "Billing",
-      "audit_log": "Audit Log",
-      "settings": "Profile & Settings",
-      "admin_panel": "Super Admin",
-      "logout": "Logout"
-    }
+    "overview": "Overview",
+    "my_tenant_portal": "My Tenant Portal",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "expenses": "Expenses",
+    "maintenance": "Maintenance",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "settings": "Profile & Settings",
+    "logout": "Logout",
+    "total_properties": "Total Properties",
+    "active_tenants": "Active Tenants",
+    "monthly_revenue": "Monthly Revenue",
+    "occupancy_rate": "Occupancy Rate",
+    "financials": "Financials (Last 6 Months)",
+    "occupancy_growth": "Occupancy Growth",
+    "overdue_rent_reminders": "Overdue Rent Reminders",
+    "send_reminder": "Send Reminder",
+    "no_late_tenants": "No tenants are currently late on rent.",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
+    "renew_lease": "Renew Lease",
+    "no_expiring_leases": "No leases are expiring within the next 60 days.",
+    "loading_dashboard_data": "Loading Dashboard Data...",
+    "loading_your_dashboard": "Loading Your Dashboard...",
+    "access_issue": "Access Issue",
+    "fetching_subscription_details_error": "We encountered an issue fetching your subscription details:",
+    "invalid_session_prompt": "This might be due to an invalid session. Please try logging in again.",
+    "no_subscription_found": "No Subscription Found",
+    "no_associated_subscription_prompt": "It looks like your account doesn't have an associated subscription. Please contact support or choose a new plan.",
+    "go_back_to_login": "Go Back to Login"
+  },
+  "profile_settings": {
+    "your_profile": "Your Profile",
+    "name": "Name",
+    "email": "Email",
+    "role": "Role",
+    "language_settings": "Language Settings",
+    "select_language": "Select Language",
+    "theme_settings": "Theme Settings",
+    "current_theme": "Current Theme",
+    "toggle_theme": "Toggle Theme",
+    "device_default_theme_note": "Your device's default theme (light/dark) is detected on load.",
+    "organization_branding": "Organization Branding",
+    "company_name": "Company Name",
+    "company_address": "Company Address",
+    "company_logo": "Company Logo",
+    "save_branding": "Save Branding",
+    "profile_info": "Profile Information",
+    "full_name": "Full Name",
+    "change_password": "Change Password",
+    "current_password": "Current Password",
+    "new_password": "New Password",
+    "confirm_new_password": "Confirm New Password",
+    "save_profile": "Save Profile",
+    "update_password": "Update Password"
+  },
+  "admin_panel": {
+    "admin_panel_title": "Admin Panel",
+    "dashboard": "Dashboard",
+    "organizations": "Organizations",
+    "users": "Users",
+    "moderators": "Moderators",
+    "manage_plans": "Manage Plans",
+    "site_editor": "Site Editor",
+    "billing": "Billing",
+    "my_profile": "My Profile",
+    "exit_admin": "Exit Admin",
+    "manage_all_users": "Manage All Users",
+    "search_by_name_email": "Search by name or email...",
+    "organization": "Organization",
+    "platform_wide_maintenance_requests": "Platform-Wide Maintenance Requests",
+    "issue": "Issue",
+    "status": "Status",
+    "data_deletion_requests": "Data & Deletion Requests",
+    "data_export_requested": "Data Export Requested",
+    "deletion_requested": "Deletion Requested",
+    "actions": "Actions",
+    "approve_export": "Approve Export",
+    "confirm_deletion": "Confirm Deletion",
+    "loading_data": "Loading Data...",
+    "manage_subscription_plans": "Manage Subscription Plans",
+    "add_new_plan": "+ Add New Plan",
+    "plan_name": "Plan Name",
+    "price": "Price",
+    "limits": "Limits",
+    "public": "Public",
+    "edit": "Edit",
+    "delete": "Delete",
+    "edit_subscription_plan": "Edit Subscription Plan",
+    "create_new_plan": "Create New Plan",
+    "price_usd": "Price (USD)",
+    "billing_cycle": "Billing Cycle",
+    "subscription_limits": "Subscription Limits",
+    "max_properties": "Max Properties",
+    "max_tenants": "Max Tenants",
+    "max_agents": "Max Agents",
+    "features_comma_separated": "Features (comma-separated list)",
+    "visible_public_pricing_page": "Visible on public pricing page",
+    "save_plan": "Save Plan",
+    "cancel": "Cancel",
+    "loading_organizations": "Loading organizations...",
+    "deactivate": "Deactivate",
+    "activate": "Activate",
+    "grant_lifetime_access": "Grant Lifetime Access",
+    "revoke_lifetime_access": "Revoke Lifetime Access",
+    "lifetime": "Lifetime",
+    "no_plan": "No Plan",
+    "loading_billing_data": "Loading Billing Data...",
+    "no_other_users_org": "No other users in this organization yet.",
+    "add_moderator": "Add Moderator",
+    "no_moderators_created": "No moderators have been created yet."
+  },
+  "properties_page": {
+    "manage_properties": "Manage Properties",
+    "add_property": "+ Add Property",
+    "property_name": "Property Name",
+    "address": "Address",
+    "units": "Units",
+    "status": "Status",
+    "manage": "Manage",
+    "no_properties_found": "No Properties Found",
+    "get_started_add_first_property": "Get started by adding your first property.",
+    "add_first_property": "+ Add Your First Property",
+    "add_new_property": "Add New Property",
+    "street_address": "Street Address",
+    "city": "City",
+    "state_province": "State / Province",
+    "zip_postal_code": "Zip / Postal Code",
+    "number_of_units": "Number of Units",
+    "save_property": "Save Property"
+  },
+  "tenants_page": {
+    "manage_tenants": "Manage Tenants",
+    "collection_sheet": "Collection Sheet",
+    "add_tenant": "+ Add Tenant",
+    "tenant_name": "Tenant Name",
+    "property": "Property",
+    "unit": "Unit",
+    "no_tenants_found": "No Tenants Found",
+    "get_started_add_first_tenant": "Get started by adding your first tenant.",
+    "add_first_tenant": "+ Add Your First Tenant",
+    "add_new_tenant": "Add New Tenant",
+    "primary_tenant_info": "Primary Tenant Info",
+    "full_name": "Full Name",
+    "email": "Email",
+    "phone": "Phone",
+    "lease_property": "Lease & Property",
+    "monthly_rent": "Monthly Rent",
+    "lease_end_date": "Lease End Date",
+    "other_occupants": "Other Occupants",
+    "adult_name": "Adult Name",
+    "adult_phone": "Adult Phone",
+    "add_another_adult": "Add Another Adult",
+    "save_tenant": "Save Tenant",
+    "loading_tenants": "Loading Tenants..."
+  },
+  "expenses_page": {
+    "manage_expenses": "Manage Expenses",
+    "log_expense": "+ Log Expense",
+    "description": "Description",
+    "paid_to": "Paid To",
+    "date": "Date",
+    "category": "Category",
+    "amount": "Amount",
+    "actions": "Actions",
+    "download_document": "Download Document",
+    "copy_share_link": "Copy Link",
+    "no_expenses_recorded": "No Expenses Recorded",
+    "log_first_expense": "Log your first expense to start tracking.",
+    "log_your_first_expense": "+ Log Your First Expense",
+    "log_new_expense": "Log New Expense",
+    "attach_document": "Attach Document (Optional)",
+    "save_expense": "Save Expense",
+    "paid_to_agent": "Paid To Agent",
+    "select_agent_optional": "Select Agent (Optional)"
+  },
+  "maintenance_page": {
+    "maintenance_requests": "Maintenance Requests",
+    "date": "Date",
+    "tenant": "Tenant",
+    "property": "Property",
+    "issue": "Issue",
+    "status": "Status",
+    "update_status": "Update Status:",
+    "no_maintenance_requests": "No Maintenance Requests Found",
+    "submit_requests_prompt": "You can submit requests from your tenant portal or properties page.",
+    "new_maintenance_request": "New Maintenance Request",
+    "category": "Category",
+    "describe_issue": "Describe the Issue",
+    "submit_request": "Submit Request"
+  },
+  "not_found_page": {
+    "title": "404",
+    "subtitle": "Page Not Found",
+    "message": "Sorry, the page you are looking for does not exist or may have been moved.",
+    "return_to_homepage": "Return to Homepage"
   }
 }
