--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,14 +1,17 @@
 {
     "header": {
-        "features": "Features",
-        "about": "About Us",
-        "pricing": "Pricing",
-        "contact": "Contact",
-        "portal_login": "Portal Log In",
-        "get_started": "Get Started",
-        "login": "Log In",
-        "sign_up": "Sign Up"
-    },
+  "features": "Features",
+  "about": "About Us",
+  "services": "Services",           // <-- add this
+  "leadership": "Leadership",       // <-- add this
+  "install_app": "Install App",     // <-- add this
+  "pricing": "Pricing",
+  "contact": "Contact",
+  "portal_login": "Portal Login",
+  "get_started": "Get Started",
+  "login": "Login",
+  "sign_up": "Sign Up"
+},
     "language_toggle": {
         "en_display": "English",
         "bn_display": "বাংলা",
