--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -1,17 +1,17 @@
 {
     "header": {
-  "features": "বৈশিষ্ট্য",
-  "about": "আমাদের সম্পর্কে",
-  "services": "সেবা সমূহ",             
-  "leadership": "নেতৃত্ব",               
-  "install_app": "অ্যাপ ইন্সটল করুন",   
-  "pricing": "মূল্য নির্ধারণ",
-  "contact": "যোগাযোগ",
-  "portal_login": "পোর্টাল লগ ইন",
-  "get_started": "শুরু করুন",
-  "login": "লগ ইন",
-  "sign_up": "সাইন আপ"
-},
+        "features": "বৈশিষ্ট্য",
+        "about": "আমাদের সম্পর্কে",
+        "services": "সেবা সমূহ",
+        "leadership": "নেতৃত্ব",
+        "install_app": "অ্যাপ ইন্সটল করুন",
+        "pricing": "মূল্য নির্ধারণ",
+        "contact": "যোগাযোগ",
+        "portal_login": "পোর্টাল লগ ইন",
+        "get_started": "শুরু করুন",
+        "login": "লগ ইন",
+        "sign_up": "সাইন আপ"
+    },
     "language_toggle": {
         "en_display": "English",
         "bn_display": "বাংলা",
@@ -137,11 +137,13 @@
         "tenants": "ভাড়াটে",
         "expenses": "খরচ",
         "maintenance": "রক্ষণাবেক্ষণ",
+        "cash_flow": "নগদ প্রবাহ",
+        "reminders": "অনুস্মারক",
         "users_invites": "ব্যবহারকারী ও আমন্ত্রণ",
         "billing": "বিলিং",
         "audit_log": "অডিট লগ",
         "admin_panel": "অ্যাডমিন প্যানেল",
-        "settings": "প্রোফাইল ও সেটিংস",
+        "settings": "সেটিংস",
         "logout": "লগ আউট",
         "total_properties": "মোট সম্পত্তি",
         "active_tenants": "সক্রিয় ভাড়াটে",
