--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -145,6 +145,7 @@
         "admin_panel": "Admin Panel",
         "settings": "Settings",
         "logout": "Logout",
+        "more": "More",
         "monthly_revenue": "Monthly Revenue",
         "total_properties": "Total Properties",
         "active_tenants": "Active Tenants",
