--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -145,6 +145,7 @@
         "admin_panel": "অ্যাডমিন প্যানেল",
         "settings": "সেটিংস",
         "logout": "লগ আউট",
+        "more": "আরও",
         "monthly_revenue": "মাসিক আয়",
         "total_properties": "মোট সম্পত্তি",
         "active_tenants": "সক্রিয় ভাড়াটে",
