--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -2,9 +2,12 @@
   "header": {
     "features": "Features",
     "about": "About Us",
+    "services": "Services",
+    "leadership": "Leadership",
+    "install_app": "Install App",
     "pricing": "Pricing",
     "contact": "Contact",
-    "login": "Portal Login",
+    "portal_login": "Portal Login",
     "get_started": "Get Started",
     "sign_up": "Sign Up"
   },
@@ -15,118 +18,45 @@
     "legal_links": "Legal",
     "social_links": "Social"
   },
-  "auth": {
-    "welcome_back": "Welcome Back!",
-    "login_prompt": "Log in to your account to continue.",
-    "email_address": "Email Address",
-    "password": "Password",
-    "sign_in": "Sign In",
-    "or": "OR",
-    "sign_in_google": "Sign In with Google",
-    "no_account": "Don't have an account?",
-    "sign_up_here": "Sign Up Here",
-    "forgot_password": "Forgot Password?",
-    "forgot_password_title": "Forgot Your Password?",
-    "forgot_password_prompt": "No problem. Enter your email address below, and we'll send you a link to reset it.",
-    "send_reset_link": "Send Reset Link",
-    "remembered_password": "Remembered your password?",
-    "create_account": "Create Your Account",
-    "start_trial": "Start your free trial today.",
-    "choose_role": "First, choose your role",
-    "i_am_landlord": "I am a Landlord",
-    "i_am_agent": "I am an Agent",
-    "full_name": "Full Name",
-    "create_password": "Create Password",
-    "confirm_password": "Confirm Password",
-    "agree_to_terms": "I agree to the <1>Terms and Conditions</1> and <3>Privacy Policy</3>.",
-    "creating_account": "Creating Account...",
-    "smarter_management": "A smarter way to manage properties.",
-    "smarter_management_desc": "Our platform provides the tools, security, and support you need to grow your business.",
-    "already_have_account": "Already have an account?",
-    "by_signing_in": "By signing in, you agree to our <1>Terms</1> and <3>Privacy Policy</3>.",
-    "you_are_invited": "You're Invited!",
-    "invited_by": "{{inviterName}} has invited you to join their team as an Agent/Manager.",
-    "set_password_new": "Since you're new, please set a password to create your account.",
-    "accept_invitation": "Accept Invitation & Continue",
-    "invalid_token": "This invitation is invalid or has expired.",
-    "return_to_login": "Return to Login",
-    "verifying_invitation": "Verifying Invitation..."
+  "hero": {
+    "title": "The All-in-One Platform for Modern Property Management",
+    "subtitle": "Automate tasks, track finances, and manage tenants with ease. HNV provides the tools you need to scale your property business efficiently.",
+    "cta": "Start Your Free Trial"
   },
-  "dashboard": {
-    "overview": "Overview",
-    "my_tenant_portal": "My Tenant Portal",
-    "properties": "Properties",
-    "tenants": "Tenants",
-    "expenses": "Expenses",
-    "maintenance": "Maintenance",
-    "cash_flow": "Cash Flow",
-    "reminders": "Reminders",
-    "approvals": "Approvals",
-    "users_invites": "Users & Invites",
-    "billing": "Billing",
-    "audit_log": "Audit Log",
-    "admin_panel": "Admin Panel",
-    "settings": "Settings",
-    "logout": "Logout",
-    "more": "More",
-    "monthly_revenue": "Monthly Revenue",
-    "total_properties": "Total Properties",
-    "active_tenants": "Active Tenants",
-    "occupancy_rate": "Occupancy Rate",
-    "financials_chart_title": "Financials (Last 6 Months)",
-    "rent_status_chart_title": "Rent Payment Status",
-    "overdue_rent_reminders": "Overdue Rent Reminders",
-    "upcoming_lease_expirations": "Upcoming Lease Expirations",
-    "send_reminder": "Send Reminder",
-    "renew_lease": "Renew Lease",
-    "no_overdue_rent": "No tenants with overdue rent.",
-    "no_expiring_leases": "No leases expiring soon.",
-    "loading_data": "Loading Dashboard Data..."
+  "about": {
+    "title": "About HNV Solutions",
+    "subtitle": "We are dedicated to simplifying property management through innovative technology.",
+    "mission_title": "Our Mission",
+    "mission_statement": "To provide user-friendly tools that empower property managers to achieve operational excellence, enhance tenant satisfaction, and maximize profitability.",
+    "vision_title": "Our Vision",
+    "vision_statement": "To be the leading global platform for property management, recognized for our commitment to customer success and continuous innovation.",
+    "team_title": "Meet Our Leadership Team",
+    "team_subtitle": "The driving force behind our commitment to excellence and innovation."
   },
-  "settings_page": {
-    "title": "Profile & Settings",
-    "profile_info": "Your Profile",
-    "name": "Name",
-    "email": "Email",
-    "role": "Role",
-    "change_password": "Change Password",
-    "current_password": "Current Password",
-    "new_password": "New Password",
-    "confirm_new_password": "Confirm New Password",
-    "update_password": "Update Password",
-    "danger_zone": "Danger Zone",
-    "delete_account_desc": "Deleting your account is a permanent action. All of your data, including properties, tenants, and financial records, will be scheduled for permanent removal. This cannot be undone.",
-    "request_account_deletion": "Request Account Deletion"
+  "services": {
+    "title": "Our Services",
+    "subtitle": "Comprehensive solutions tailored for your property management needs.",
+    "tenant_management_title": "Tenant Management",
+    "tenant_management_desc": "Efficiently track tenant information, lease agreements, and communication logs.",
+    "property_tracking_title": "Property Tracking",
+    "property_tracking_desc": "Manage property details, maintenance schedules, and unit availability.",
+    "rent_collection_title": "Rent Collection",
+    "rent_collection_desc": "Automate rent reminders, process online payments, and track financial records."
   },
-  "billing_page": {
-      "title": "Billing & Subscription",
-      "current_plan": "Your Current Plan",
-      "manage_desc": "Manage your subscription and view plan details.",
-      "plan_features": "Plan Features:",
-      "renews_on": "Your plan renews on:",
-      "trial_expires_on": "Your trial expires on:",
-      "manage_subscription": "Manage Subscription",
-      "redirect_notice": "You will be redirected to our payment partner to manage your subscription.",
-      "lifetime_access": "Lifetime Access",
-      "lifetime_desc": "Your account has been granted lifetime access. You have full access to all features without recurring payments."
+  "leadership": {
+    "title": "Meet Our Leadership",
+    "subtitle": "The driving force behind ProManage Solutions, committed to excellence and innovation.",
+    "founder_visionary": "Visionary Founder",
+    "founder_1_quote": "Leading with vision to redefine property management through technology and customer-centric solutions.",
+    "founder_2_quote": "Innovating at the forefront of tech to build robust and scalable platforms for our users.",
+    "coo_quote": "Ensuring operational excellence and seamless service delivery for all our clients."
   },
-  "common": {
-    "loading": "Loading...",
-    "error": "Error",
-    "success": "Success",
-    "save": "Save",
-    "saving": "Saving...",
-    "cancel": "Cancel",
-    "delete": "Delete",
-    "edit": "Edit",
-    "search": "Search...",
-    "all_properties": "All Properties",
-    "actions": "Actions",
-    "status": "Status",
-    "description": "Description",
-    "date": "Date",
-    "amount": "Amount",
-    "no_results_found": "No results found.",
-    "confirm_deletion": "Are you sure you want to delete this? This action cannot be undone."
+  "pricing": {
+    "title": "Choose The Plan That's Right For You",
+    "subtitle": "Simple, transparent pricing to help you grow. No hidden fees, cancel anytime.",
+    "per_month": "/ month",
+    "choose_plan": "Choose Plan",
+    "free": "Free",
+    "disclaimer": "Subscriptions and billing are securely managed by our payment partner."
   }
 }
