--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -2,9 +2,12 @@
   "header": {
     "features": "বৈশিষ্ট্য",
     "about": "আমাদের সম্পর্কে",
+    "services": "সেবাসমূহ",
+    "leadership": "নেতৃত্ব",
+    "install_app": "অ্যাপ ইনস্টল করুন",
     "pricing": "মূল্য তালিকা",
     "contact": "যোগাযোগ",
-    "login": "পোর্টাল লগইন",
+    "portal_login": "পোর্টাল লগইন",
     "get_started": "শুরু করুন",
     "sign_up": "নিবন্ধন করুন"
   },
@@ -15,118 +18,45 @@
     "legal_links": "আইনি",
     "social_links": "সামাজিক"
   },
-  "auth": {
-    "welcome_back": "আবার স্বাগতম!",
-    "login_prompt": "চালিয়ে যেতে আপনার অ্যাকাউন্টে লগ ইন করুন।",
-    "email_address": "ইমেইল ঠিকানা",
-    "password": "পাসওয়ার্ড",
-    "sign_in": "সাইন ইন",
-    "or": "অথবা",
-    "sign_in_google": "Google দিয়ে সাইন ইন করুন",
-    "no_account": "কোনো অ্যাকাউন্ট নেই?",
-    "sign_up_here": "এখানে নিবন্ধন করুন",
-    "forgot_password": "পাসওয়ার্ড ভুলে গেছেন?",
-    "forgot_password_title": "পাসওয়ার্ড ভুলে গেছেন?",
-    "forgot_password_prompt": "কোনো সমস্যা নেই। আপনার ইমেল ঠিকানা লিখুন, আমরা আপনাকে একটি রিসেট লিঙ্ক পাঠাব।",
-    "send_reset_link": "রিসেট লিঙ্ক পাঠান",
-    "remembered_password": "পাসওয়ার্ড মনে পড়েছে?",
-    "create_account": "আপনার অ্যাকাউন্ট তৈরি করুন",
-    "start_trial": "আজই আপনার বিনামূল্যে ট্রায়াল শুরু করুন।",
-    "choose_role": "প্রথমে, আপনার ভূমিকা নির্বাচন করুন",
-    "i_am_landlord": "আমি একজন বাড়িওয়ালা",
-    "i_am_agent": "আমি একজন এজেন্ট",
-    "full_name": "পুরো নাম",
-    "create_password": "পাসওয়ার্ড তৈরি করুন",
-    "confirm_password": "পাসওয়ার্ড নিশ্চিত করুন",
-    "agree_to_terms": "আমি <1>শর্তাবলী</1> এবং <3>গোপনীয়তা নীতি</3>-তে সম্মত।",
-    "creating_account": "অ্যাকাউন্ট তৈরি করা হচ্ছে...",
-    "smarter_management": "সম্পত্তি ব্যবস্থাপনার একটি স্মার্ট উপায়।",
-    "smarter_management_desc": "আমাদের প্ল্যাটফর্ম আপনার ব্যবসা বাড়াতে প্রয়োজনীয় সরঞ্জাম, নিরাপত্তা এবং সহায়তা প্রদান করে।",
-    "already_have_account": "ইতিমধ্যে একটি অ্যাকাউন্ট আছে?",
-    "by_signing_in": "সাইন ইন করার মাধ্যমে, আপনি আমাদের <1>শর্তাবলী</1> এবং <3>গোপনীয়তা নীতি</3>-তে সম্মত হচ্ছেন।",
-    "you_are_invited": "আপনাকে আমন্ত্রণ জানানো হয়েছে!",
-    "invited_by": "{{inviterName}} আপনাকে এজেন্ট/ম্যানেজার হিসাবে তার দলে যোগদানের জন্য আমন্ত্রণ জানিয়েছেন।",
-    "set_password_new": "যেহেতু আপনি নতুন, আপনার অ্যাকাউন্ট তৈরি করতে একটি পাসওয়ার্ড সেট করুন।",
-    "accept_invitation": "আমন্ত্রণ গ্রহণ করুন এবং চালিয়ে যান",
-    "invalid_token": "এই আমন্ত্রণটি অবৈধ বা মেয়াদোত্তীর্ণ।",
-    "return_to_login": "লগইনে ফিরে যান",
-    "verifying_invitation": "আমন্ত্রণ যাচাই করা হচ্ছে..."
+  "hero": {
+    "title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য অল-ইন-ওয়ান প্ল্যাটফর্ম",
+    "subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন। HNV আপনার সম্পত্তি ব্যবসা দক্ষতার সাথে বাড়ানোর জন্য প্রয়োজনীয় সরঞ্জাম সরবরাহ করে।",
+    "cta": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন"
   },
-  "dashboard": {
-    "overview": "একনজরে",
-    "my_tenant_portal": "আমার টেন্যান্ট পোর্টাল",
-    "properties": "সম্পত্তি",
-    "tenants": "ভাড়াটে",
-    "expenses": "খরচ",
-    "maintenance": "রক্ষণাবেক্ষণ",
-    "cash_flow": "নগদ প্রবাহ",
-    "reminders": "অনুস্মারক",
-    "approvals": "অনুমোদন",
-    "users_invites": "ব্যবহারকারী ও আমন্ত্রণ",
-    "billing": "বিলিং",
-    "audit_log": "অডিট লগ",
-    "admin_panel": "অ্যাডমিন প্যানেল",
-    "settings": "সেটিংস",
-    "logout": "লগ আউট",
-    "more": "আরও",
-    "monthly_revenue": "মাসিক আয়",
-    "total_properties": "মোট সম্পত্তি",
-    "active_tenants": "সক্রিয় ভাড়াটে",
-    "occupancy_rate": "দখলের হার",
-    "financials_chart_title": "আর্থিক চিত্র (শেষ ৬ মাস)",
-    "rent_status_chart_title": "ভাড়া প্রদানের অবস্থা",
-    "overdue_rent_reminders": "বকেয়া ভাড়ার অনুস্মারক",
-    "upcoming_lease_expirations": "আসন্ন ইজারার মেয়াদ",
-    "send_reminder": "অনুস্মারক পাঠান",
-    "renew_lease": "ইজারা নবায়ন করুন",
-    "no_overdue_rent": "বকেয়া ভাড়াসহ কোনো ভাড়াটে নেই।",
-    "no_expiring_leases": "শীঘ্রই মেয়াদ শেষ হচ্ছে এমন কোনো ইজারা নেই।",
-    "loading_data": "ড্যাশবোর্ড ডেটা লোড হচ্ছে..."
+  "about": {
+    "title": "HNV সলিউশনস সম্পর্কে",
+    "subtitle": "আমরা উদ্ভাবনী প্রযুক্তির মাধ্যমে সম্পত্তি ব্যবস্থাপনাকে সহজ করতে প্রতিশ্রুতিবদ্ধ।",
+    "mission_title": "আমাদের লক্ষ্য",
+    "mission_statement": "সম্পত্তি পরিচালকদের কর্মক্ষম উৎকর্ষতা অর্জন, ভাড়াটেদের সন্তুষ্টি বৃদ্ধি, এবং লাভজনকতা সর্বাধিক করতে ক্ষমতায়ন করে এমন ব্যবহারকারী-বান্ধব সরঞ্জাম সরবরাহ করা।",
+    "vision_title": "আমাদের দৃষ্টি",
+    "vision_statement": "সম্পত্তি ব্যবস্থাপনার জন্য শীর্ষস্থানীয় বিশ্বব্যাপী প্ল্যাটফর্ম হওয়া, গ্রাহকের সাফল্য এবং ক্রমাগত উদ্ভাবনের প্রতি আমাদের প্রতিশ্রুতির জন্য স্বীকৃত।",
+    "team_title": "আমাদের নেতৃত্ব দলের সাথে পরিচিত হন",
+    "team_subtitle": "শ্রেষ্ঠত্ব এবং উদ্ভাবনের পেছনে চালিকা শক্তি।"
   },
-  "settings_page": {
-    "title": "প্রোফাইল এবং সেটিংস",
-    "profile_info": "আপনার প্রোফাইল",
-    "name": "নাম",
-    "email": "ইমেইল",
-    "role": "ভূমিকা",
-    "change_password": "পাসওয়ার্ড পরিবর্তন করুন",
-    "current_password": "বর্তমান পাসওয়ার্ড",
-    "new_password": "নতুন পাসওয়ার্ড",
-    "confirm_new_password": "নতুন পাসওয়ার্ড নিশ্চিত করুন",
-    "update_password": "পাসওয়ার্ড আপডেট করুন",
-    "danger_zone": "বিপজ্জনক এলাকা",
-    "delete_account_desc": "আপনার অ্যাকাউন্ট মুছে ফেলা একটি স্থায়ী পদক্ষেপ। আপনার সমস্ত ডেটা, যার মধ্যে সম্পত্তি, ভাড়াটে এবং আর্থিক রেকর্ড রয়েছে, স্থায়ীভাবে মুছে ফেলা হবে। এটি ফিরিয়ে আনা যাবে না।",
-    "request_account_deletion": "অ্যাকাউন্ট মুছে ফেলার অনুরোধ করুন"
+  "services": {
+    "title": "আমাদের সেবাসমূহ",
+    "subtitle": "আপনার সম্পত্তি পরিচালনার প্রয়োজনের জন্য বিশেষভাবে তৈরি ব্যাপক সমাধান।",
+    "tenant_management_title": "ভাড়াটে ব্যবস্থাপনা",
+    "tenant_management_desc": "ভাড়াটেদের তথ্য, ইজারা চুক্তি এবং যোগাযোগের লগগুলি দক্ষতার সাথে ট্র্যাক করুন।",
+    "property_tracking_title": "সম্পত্তি ট্র্যাকিং",
+    "property_tracking_desc": "সম্পত্তির বিবরণ, রক্ষণাবেক্ষণের সময়সূচী এবং ইউনিটের প্রাপ্যতা পরিচালনা করুন।",
+    "rent_collection_title": "ভাড়া সংগ্রহ",
+    "rent_collection_desc": "ভাড়ার অনুস্মারক স্বয়ংক্রিয় করুন, অনলাইন পেমেন্ট প্রক্রিয়া করুন এবং আর্থিক রেকর্ড ট্র্যাক করুন।"
   },
-  "billing_page": {
-      "title": "বিলিং এবং সাবস্ক্রিপশন",
-      "current_plan": "আপনার বর্তমান প্ল্যান",
-      "manage_desc": "আপনার সাবস্ক্রিপশন পরিচালনা করুন এবং প্ল্যানের বিবরণ দেখুন।",
-      "plan_features": "প্ল্যানের বৈশিষ্ট্য:",
-      "renews_on": "আপনার প্ল্যানটি নবায়ন হবে:",
-      "trial_expires_on": "আপনার ট্রায়াল শেষ হবে:",
-      "manage_subscription": "সাবস্ক্রিপশন পরিচালনা করুন",
-      "redirect_notice": "আপনার সাবস্ক্রিপশন পরিচালনা করতে আপনাকে আমাদের পেমেন্ট পার্টনারের কাছে পুনঃনির্দেশিত করা হবে।",
-      "lifetime_access": "আজীবন অ্যাক্সেস",
-      "lifetime_desc": "আপনার অ্যাকাউন্টকে আজীবন অ্যাক্সেস দেওয়া হয়েছে। আপনি পুনরাবৃত্ত পেমেন্ট ছাড়াই সমস্ত বৈশিষ্ট্য সম্পূর্ণ অ্যাক্সেস করতে পারবেন।"
+  "leadership": {
+    "title": "আমাদের নেতৃত্বের সাথে পরিচিত হন",
+    "subtitle": "ProManage Solutions এর চালিকা শক্তি, শ্রেষ্ঠত্ব এবং উদ্ভাবনের প্রতি প্রতিশ্রুতিবদ্ধ।",
+    "founder_visionary": "স্বপ্নদর্শী প্রতিষ্ঠাতা",
+    "founder_1_quote": "প্রযুক্তি এবং গ্রাহক-কেন্দ্রিক সমাধানের মাধ্যমে সম্পত্তি ব্যবস্থাপনাকে নতুনভাবে সংজ্ঞায়িত করার দৃষ্টি নিয়ে নেতৃত্ব দেওয়া।",
+    "founder_2_quote": "আমাদের ব্যবহারকারীদের জন্য শক্তিশালী এবং পরিমাপযোগ্য প্ল্যাটফর্ম তৈরি করতে প্রযুক্তির অগ্রভাগে উদ্ভাবন করা।",
+    "coo_quote": "আমাদের সকল ক্লায়েন্টদের জন্য পরিচালনগত শ্রেষ্ঠত্ব এবং নির্বিঘ্ন পরিষেবা সরবরাহ নিশ্চিত করা।"
   },
-  "common": {
-    "loading": "লোড হচ্ছে...",
-    "error": "ত্রুটি",
-    "success": "সফল",
-    "save": "সংরক্ষণ করুন",
-    "saving": "সংরক্ষণ করা হচ্ছে...",
-    "cancel": "বাতিল করুন",
-    "delete": "মুছে ফেলুন",
-    "edit": "সম্পাদনা করুন",
-    "search": "অনুসন্ধান করুন...",
-    "all_properties": "সমস্ত সম্পত্তি",
-    "actions": "কার্যক্রম",
-    "status": "অবস্থা",
-    "description": "বিবরণ",
-    "date": "তারিখ",
-    "amount": "পরিমাণ",
-    "no_results_found": "কোনো ফলাফল পাওয়া যায়নি।",
-    "confirm_deletion": "আপনি কি নিশ্চিত যে এটি মুছে ফেলতে চান? এই পদক্ষেপটি আর ফেরানো যাবে না।"
+  "pricing": {
+    "title": "আপনার জন্য সঠিক পরিকল্পনা বেছে নিন",
+    "subtitle": "আপনার বৃদ্ধিতে সহায়তা করার জন্য সহজ, স্বচ্ছ মূল্য নির্ধারণ। কোনো লুকানো ফি নেই, যেকোনো সময় বাতিল করুন।",
+    "per_month": "/ মাস",
+    "choose_plan": "পরিকল্পনা বেছে নিন",
+    "free": "বিনামূল্যে",
+    "disclaimer": "সাবস্ক্রিপশন এবং বিলিং আমাদের পেমেন্ট পার্টনারের মাধ্যমে নিরাপদে পরিচালিত হয়।"
   }
 }
