--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -4,10 +4,9 @@
     "about": "আমাদের সম্পর্কে",
     "services": "সেবাসমূহ",
     "leadership": "নেতৃত্ব",
-    "install_app": "অ্যাপ ইনস্টল করুন",
     "pricing": "মূল্য তালিকা",
     "contact": "যোগাযোগ",
-    "portal_login": "পোর্টাল লগইন",
+    "login": "পোর্টাল লগইন",
     "get_started": "শুরু করুন",
     "sign_up": "নিবন্ধন করুন"
   },
@@ -18,10 +17,35 @@
     "legal_links": "আইনি",
     "social_links": "সামাজিক"
   },
-  "hero": {
-    "title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য অল-ইন-ওয়ান প্ল্যাটফর্ম",
-    "subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন। HNV আপনার সম্পত্তি ব্যবসা দক্ষতার সাথে বাড়ানোর জন্য প্রয়োজনীয় সরঞ্জাম সরবরাহ করে।",
-    "cta": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন"
+  "auth": {
+    "welcome_back": "আবার স্বাগতম!",
+    "login_prompt": "চালিয়ে যেতে আপনার অ্যাকাউন্টে লগ ইন করুন।",
+    "email_address": "ইমেইল ঠিকানা",
+    "password": "পাসওয়ার্ড",
+    "sign_in": "সাইন ইন",
+    "or": "অথবা",
+    "sign_in_google": "Google দিয়ে সাইন ইন করুন",
+    "no_account": "কোনো অ্যাকাউন্ট নেই?",
+    "sign_up_here": "এখানে নিবন্ধন করুন",
+    "forgot_password": "পাসওয়ার্ড ভুলে গেছেন?",
+    "create_account": "আপনার অ্যাকাউন্ট তৈরি করুন",
+    "smarter_management": "সম্পত্তি ব্যবস্থাপনার একটি স্মার্ট উপায়।"
+  },
+  "dashboard": {
+    "overview": "একনজরে",
+    "properties": "সম্পত্তি",
+    "tenants": "ভাড়াটে",
+    "expenses": "খরচ",
+    "maintenance": "রক্ষণাবেক্ষণ",
+    "cash_flow": "নগদ প্রবাহ",
+    "reminders": "অনুস্মারক",
+    "approvals": "অনুমোদন",
+    "users_invites": "ব্যবহারকারী ও আমন্ত্রণ",
+    "billing": "বিলিং",
+    "audit_log": "অডিট লগ",
+    "admin_panel": "অ্যাডমিন প্যানেল",
+    "settings": "সেটিংস",
+    "logout": "লগ আউট"
   },
   "about": {
     "title": "HNV সলিউশনস সম্পর্কে",
@@ -45,7 +69,7 @@
   },
   "leadership": {
     "title": "আমাদের নেতৃত্বের সাথে পরিচিত হন",
-    "subtitle": "ProManage Solutions এর চালিকা শক্তি, শ্রেষ্ঠত্ব এবং উদ্ভাবনের প্রতি প্রতিশ্রুতিবদ্ধ।",
+    "subtitle": "শ্রেষ্ঠত্ব এবং উদ্ভাবনের প্রতি আমাদের প্রতিশ্রুতির চালিকা শক্তি।",
     "founder_visionary": "স্বপ্নদর্শী প্রতিষ্ঠাতা",
     "founder_1_quote": "প্রযুক্তি এবং গ্রাহক-কেন্দ্রিক সমাধানের মাধ্যমে সম্পত্তি ব্যবস্থাপনাকে নতুনভাবে সংজ্ঞায়িত করার দৃষ্টি নিয়ে নেতৃত্ব দেওয়া।",
     "founder_2_quote": "আমাদের ব্যবহারকারীদের জন্য শক্তিশালী এবং পরিমাপযোগ্য প্ল্যাটফর্ম তৈরি করতে প্রযুক্তির অগ্রভাগে উদ্ভাবন করা।",
@@ -54,9 +78,7 @@
   "pricing": {
     "title": "আপনার জন্য সঠিক পরিকল্পনা বেছে নিন",
     "subtitle": "আপনার বৃদ্ধিতে সহায়তা করার জন্য সহজ, স্বচ্ছ মূল্য নির্ধারণ। কোনো লুকানো ফি নেই, যেকোনো সময় বাতিল করুন।",
-    "per_month": "/ মাস",
     "choose_plan": "পরিকল্পনা বেছে নিন",
-    "free": "বিনামূল্যে",
     "disclaimer": "সাবস্ক্রিপশন এবং বিলিং আমাদের পেমেন্ট পার্টনারের মাধ্যমে নিরাপদে পরিচালিত হয়।"
   }
 }
