--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -17,6 +17,11 @@
     "legal_links": "আইনি",
     "social_links": "সামাজিক"
   },
+  "landing": {
+    "hero_title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য অল-ইন-ওয়ান প্ল্যাটফর্ম",
+    "hero_subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন। HNV আপনার সম্পত্তি ব্যবসা দক্ষতার সাথে বাড়ানোর জন্য প্রয়োজনীয় সরঞ্জাম সরবরাহ করে।",
+    "hero_cta": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন"
+  },
   "auth": {
     "welcome_back": "আবার স্বাগতম!",
     "login_prompt": "চালিয়ে যেতে আপনার অ্যাকাউন্টে লগ ইন করুন।",
@@ -28,8 +33,20 @@
     "no_account": "কোনো অ্যাকাউন্ট নেই?",
     "sign_up_here": "এখানে নিবন্ধন করুন",
     "forgot_password": "পাসওয়ার্ড ভুলে গেছেন?",
+    "forgot_password_title": "পাসওয়ার্ড ভুলে গেছেন?",
+    "forgot_password_prompt": "কোনো সমস্যা নেই। আপনার ইমেল ঠিকানা লিখুন, আমরা আপনাকে একটি রিসেট লিঙ্ক পাঠাব।",
+    "send_reset_link": "রিসেট লিঙ্ক পাঠান",
+    "remembered_password": "পাসওয়ার্ড মনে পড়েছে?",
     "create_account": "আপনার অ্যাকাউন্ট তৈরি করুন",
-    "smarter_management": "সম্পত্তি ব্যবস্থাপনার একটি স্মার্ট উপায়।"
+    "smarter_management": "সম্পত্তি ব্যবস্থাপনার একটি স্মার্ট উপায়।",
+    "by_signing_in": "সাইন ইন করার মাধ্যমে, আপনি আমাদের <1>শর্তাবলী</1> এবং <3>গোপনীয়তা নীতি</3>-তে সম্মত হচ্ছেন।",
+    "you_are_invited": "আপনাকে আমন্ত্রণ জানানো হয়েছে!",
+    "invited_by": "{{inviterName}} আপনাকে এজেন্ট/ম্যানেজার হিসাবে তার দলে যোগদানের জন্য আমন্ত্রণ জানিয়েছেন।",
+    "set_password_new": "যেহেতু আপনি নতুন, আপনার অ্যাকাউন্ট তৈরি করতে একটি পাসওয়ার্ড সেট করুন।",
+    "accept_invitation": "আমন্ত্রণ গ্রহণ করুন এবং চালিয়ে যান",
+    "invalid_token": "এই আমন্ত্রণটি অবৈধ বা মেয়াদোত্তীর্ণ।",
+    "return_to_login": "লগইনে ফিরে যান",
+    "verifying_invitation": "আমন্ত্রণ যাচাই করা হচ্ছে..."
   },
   "dashboard": {
     "overview": "একনজরে",
@@ -45,40 +62,19 @@
     "audit_log": "অডিট লগ",
     "admin_panel": "অ্যাডমিন প্যানেল",
     "settings": "সেটিংস",
-    "logout": "লগ আউট"
-  },
-  "about": {
-    "title": "HNV সলিউশনস সম্পর্কে",
-    "subtitle": "আমরা উদ্ভাবনী প্রযুক্তির মাধ্যমে সম্পত্তি ব্যবস্থাপনাকে সহজ করতে প্রতিশ্রুতিবদ্ধ।",
-    "mission_title": "আমাদের লক্ষ্য",
-    "mission_statement": "সম্পত্তি পরিচালকদের কর্মক্ষম উৎকর্ষতা অর্জন, ভাড়াটেদের সন্তুষ্টি বৃদ্ধি, এবং লাভজনকতা সর্বাধিক করতে ক্ষমতায়ন করে এমন ব্যবহারকারী-বান্ধব সরঞ্জাম সরবরাহ করা।",
-    "vision_title": "আমাদের দৃষ্টি",
-    "vision_statement": "সম্পত্তি ব্যবস্থাপনার জন্য শীর্ষস্থানীয় বিশ্বব্যাপী প্ল্যাটফর্ম হওয়া, গ্রাহকের সাফল্য এবং ক্রমাগত উদ্ভাবনের প্রতি আমাদের প্রতিশ্রুতির জন্য স্বীকৃত।",
-    "team_title": "আমাদের নেতৃত্ব দলের সাথে পরিচিত হন",
-    "team_subtitle": "শ্রেষ্ঠত্ব এবং উদ্ভাবনের পেছনে চালিকা শক্তি।"
-  },
-  "services": {
-    "title": "আমাদের সেবাসমূহ",
-    "subtitle": "আপনার সম্পত্তি পরিচালনার প্রয়োজনের জন্য বিশেষভাবে তৈরি ব্যাপক সমাধান।",
-    "tenant_management_title": "ভাড়াটে ব্যবস্থাপনা",
-    "tenant_management_desc": "ভাড়াটেদের তথ্য, ইজারা চুক্তি এবং যোগাযোগের লগগুলি দক্ষতার সাথে ট্র্যাক করুন।",
-    "property_tracking_title": "সম্পত্তি ট্র্যাকিং",
-    "property_tracking_desc": "সম্পত্তির বিবরণ, রক্ষণাবেক্ষণের সময়সূচী এবং ইউনিটের প্রাপ্যতা পরিচালনা করুন।",
-    "rent_collection_title": "ভাড়া সংগ্রহ",
-    "rent_collection_desc": "ভাড়ার অনুস্মারক স্বয়ংক্রিয় করুন, অনলাইন পেমেন্ট প্রক্রিয়া করুন এবং আর্থিক রেকর্ড ট্র্যাক করুন।"
-  },
-  "leadership": {
-    "title": "আমাদের নেতৃত্বের সাথে পরিচিত হন",
-    "subtitle": "শ্রেষ্ঠত্ব এবং উদ্ভাবনের প্রতি আমাদের প্রতিশ্রুতির চালিকা শক্তি।",
-    "founder_visionary": "স্বপ্নদর্শী প্রতিষ্ঠাতা",
-    "founder_1_quote": "প্রযুক্তি এবং গ্রাহক-কেন্দ্রিক সমাধানের মাধ্যমে সম্পত্তি ব্যবস্থাপনাকে নতুনভাবে সংজ্ঞায়িত করার দৃষ্টি নিয়ে নেতৃত্ব দেওয়া।",
-    "founder_2_quote": "আমাদের ব্যবহারকারীদের জন্য শক্তিশালী এবং পরিমাপযোগ্য প্ল্যাটফর্ম তৈরি করতে প্রযুক্তির অগ্রভাগে উদ্ভাবন করা।",
-    "coo_quote": "আমাদের সকল ক্লায়েন্টদের জন্য পরিচালনগত শ্রেষ্ঠত্ব এবং নির্বিঘ্ন পরিষেবা সরবরাহ নিশ্চিত করা।"
-  },
-  "pricing": {
-    "title": "আপনার জন্য সঠিক পরিকল্পনা বেছে নিন",
-    "subtitle": "আপনার বৃদ্ধিতে সহায়তা করার জন্য সহজ, স্বচ্ছ মূল্য নির্ধারণ। কোনো লুকানো ফি নেই, যেকোনো সময় বাতিল করুন।",
-    "choose_plan": "পরিকল্পনা বেছে নিন",
-    "disclaimer": "সাবস্ক্রিপশন এবং বিলিং আমাদের পেমেন্ট পার্টনারের মাধ্যমে নিরাপদে পরিচালিত হয়।"
+    "logout": "লগ আউট",
+    "monthly_revenue": "মাসিক আয়",
+    "total_properties": "মোট সম্পত্তি",
+    "active_tenants": "সক্রিয় ভাড়াটে",
+    "occupancy_rate": "দখলের হার",
+    "financials_chart_title": "আর্থিক চিত্র (শেষ ৬ মাস)",
+    "rent_status_chart_title": "ভাড়া প্রদানের অবস্থা",
+    "overdue_rent_reminders": "বকেয়া ভাড়ার অনুস্মারক",
+    "upcoming_lease_expirations": "আসন্ন ইজারার মেয়াদ",
+    "send_reminder": "অনুস্মারক পাঠান",
+    "renew_lease": "ইজারা নবায়ন করুন",
+    "no_overdue_rent": "বকেয়া ভাড়াসহ কোনো ভাড়াটে নেই।",
+    "no_expiring_leases": "শীঘ্রই মেয়াদ শেষ হচ্ছে এমন কোনো ইজারা নেই।",
+    "loading_data": "ড্যাশবোর্ড ডেটা লোড হচ্ছে..."
   }
 }
