--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -75,6 +75,43 @@
     "renew_lease": "ইজারা নবায়ন করুন",
     "no_overdue_rent": "বকেয়া ভাড়াসহ কোনো ভাড়াটে নেই।",
     "no_expiring_leases": "শীঘ্রই মেয়াদ শেষ হচ্ছে এমন কোনো ইজারা নেই।",
-    "loading_data": "ড্যাশবোর্ড ডেটা লোড হচ্ছে..."
+    "loading_data": "ড্যাশবোর্ড ডেটা লোড হচ্ছে...",
+    "financial_chart": {
+      "revenue": "রাজস্ব",
+      "expenses": "খরচ"
+    }
+  },
+  "about": {
+    "title": "HNV সলিউশনস সম্পর্কে",
+    "subtitle": "আমরা উদ্ভাবনী প্রযুক্তির মাধ্যমে সম্পত্তি ব্যবস্থাপনা সহজ করার জন্য নিবেদিত।",
+    "mission_title": "আমাদের লক্ষ্য",
+    "mission_statement": "ব্যবহারকারী-বান্ধব সরঞ্জাম সরবরাহ করা যা সম্পত্তি পরিচালকদের অপারেশনাল শ্রেষ্ঠত্ব অর্জন করতে, ভাড়াটেদের সন্তুষ্টি বাড়াতে এবং লাভজনকতা সর্বাধিক করতে সক্ষম করে।",
+    "vision_title": "আমাদের স্বপ্ন",
+    "vision_statement": "সম্পত্তি ব্যবস্থাপনার জন্য বিশ্বব্যাপী নেতৃস্থানীয় প্ল্যাটফর্ম হতে, গ্রাহক সাফল্য এবং অবিচ্ছিন্ন উদ্ভাবনের প্রতি আমাদের অঙ্গীকারের জন্য স্বীকৃত।"
+  },
+  "pricing": {
+    "title": "আপনার জন্য সঠিক পরিকল্পনাটি বেছে নিন",
+    "subtitle": "সহজ, স্বচ্ছ মূল্য যা আপনাকে বাড়াতে সাহায্য করবে। কোনো লুকানো ফি নেই, যেকোনো সময় বাতিল করুন।",
+    "free": "ফ্রি",
+    "choose_plan": "পরিকল্পনা বেছে নিন",
+    "disclaimer": "সদস্যতা এবং বিলিং আমাদের পেমেন্ট পার্টনারের মাধ্যমে নিরাপদে পরিচালিত হয়।"
+  },
+  "services": {
+    "tenant_management_title": "ভাড়াটে ব্যবস্থাপনা",
+    "tenant_management_desc": "ভাড়াটেদের তথ্য, ইজারা চুক্তি এবং যোগাযোগের লগগুলি দক্ষতার সাথে ট্র্যাক করুন।",
+    "property_tracking_title": "সম্পত্তি ট্র্যাকিং",
+    "property_tracking_desc": "সম্পত্তির বিবরণ, রক্ষণাবেক্ষণের সময়সূচী এবং ইউনিটের প্রাপ্যতা পরিচালনা করুন।",
+    "rent_collection_title": "ভাড়া সংগ্রহ",
+    "rent_collection_desc": "ভাড়া অনুস্মারক স্বয়ংক্রিয় করুন, অনলাইন পেমেন্ট প্রক্রিয়া করুন এবং আর্থিক রেকর্ডগুলি ট্র্যাক করুন।",
+    "title": "আমাদের সেবাসমূহ",
+    "subtitle": "আপনার সম্পত্তি ব্যবস্থাপনার প্রয়োজনের জন্য তৈরি করা ব্যাপক সমাধান।"
+  },
+  "leadership": {
+    "title": "আমাদের নেতৃত্ব",
+    "subtitle": "উৎকর্ষ এবং উদ্ভাবনের প্রতি আমাদের অঙ্গীকারের চালিকা শক্তি।",
+    "founder_visionary": "প্রতিষ্ঠাতা ও স্বপ্নদ্রষ্টা",
+    "founder_1_quote": "আমাদের লক্ষ্য হল সম্পত্তি পরিচালকদের এমন সরঞ্জাম দিয়ে শক্তিশালী করা যা সত্যিকারের পরিবর্তন আনে।",
+    "founder_2_quote": "উদ্ভাবন এবং ব্যবহারকারীর অভিজ্ঞতা আমাদের প্রতিটি নির্মাণের কেন্দ্রে রয়েছে।",
+    "coo_quote": "আমরা আমাদের গ্রাহকদের নিরবচ্ছিন্ন পরিষেবা প্রদানের জন্য অপারেশনাল শ্রেষ্ঠত্ব নিশ্চিত করি।"
   }
 }
