--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -52,6 +52,7 @@
     "overview": "Overview",
     "properties": "Properties",
     "tenants": "Tenants",
+    "payments": "Payments",
     "expenses": "Expenses",
     "maintenance": "Maintenance",
     "cash_flow": "Cash Flow",
@@ -63,6 +64,7 @@
     "admin_panel": "Admin Panel",
     "settings": "Settings",
     "logout": "Logout",
+    "more": "More",
     "monthly_revenue": "Monthly Revenue",
     "total_properties": "Total Properties",
     "active_tenants": "Active Tenants",
